@@ -3,11 +3,14 @@ v1.1.1
 		- fixed issue in which there was no graceful error handling of missing CDS or TSS data in cuffdiff output.
 		- Fixed issue in which distribution test data (promoters, splicing, relCDS) were not appropriately added to objects on creation.
 		- Fixed bug that would sometimes cause csBoxplot() to throw an error when log-transforming fpkm data. Also added pseudocount argument.
+		- Fixed bug that would cause diffData() to return a filtered subset of results by default.
 		
 	New Features:	
 		- added getSig method to CuffSet class for rapid retrieval of significant features from all pairwise tests (as a list of IDs). 
 		By default the level is 'genes' but any feature level can be queried.
 		- csCluster now uses Jensen-Shannon distance by default (as opposed to Euclidean)
+		- Added 'xlimits' argument to csVolcano to constrain plot dimensions.
+		- Enforced requirement in csVolcano for x and y arguments (as sample names).
 	
 	Notes:
 		- Changed the default orientation of expressionBarplot() for CuffFeatureSet objects.
